--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-ultralytics
-opencv-python
-numpy
-matplotlib
-lxml
-shapely
-scikit-learn
+flask==3.0.0
+ultralytics==8.1.0
+opencv-python==4.9.0.80
+numpy==1.26.3
+shapely==2.0.2
+werkzeug==3.0.1
